add index.move.html 06/23 17:50

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
 <p>
 <table border="5" bordercolor="#66ffff">
 <tr><td><h3>
+<a href="./urls/index.move.html">
+<font face="MS p明朝">動く文字・画像</font>
+</h3></td></tr>
+</table>
+</a>
+<marquee behavior="alternate" width="100%" scrollamount="5">
+<font color="red" size="4" style="background-color:#FFFF00;">
+～・～・～・～・～・～・～・～・～</font></marquee></p>
+
+<p>
+<table border="5" bordercolor="#66ffff">
+<tr><td><h3>
 <a href="./urls/index.table.html">
 <font face="MS p明朝">表のタグ</font>
 </h3></td></tr>
